src/objects/DuoConfig__mdt.object
<CustomObject>
    <description>Describes a set of configurations for Duo</description>
    <fields>
        <fullName>Hostname__c</fullName>
        <description>The hostname of the Duo instance that should be used</description>
        <inlineHelpText>The hostname of the Duo instance that should be used</inlineHelpText>
        <label>Hostname</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether or not this configuration is enabled and can be used</description>
        <inlineHelpText>Denotes whether or not this configuration is enabled and can be used</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>The integration key for the Duo instance</description>
        <inlineHelpText>The integration key for the Duo instance</inlineHelpText>
        <label>Integration Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>999</defaultValue>
        <description>Determines in what order this configuration will be used. A lower number has a higher priority.</description>
        <inlineHelpText>Determines in what order this configuration will be used. A lower number has a higher priority.</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <description>The secret key for use against the Duo instance</description>
        <inlineHelpText>The secret key for use against the Duo instance</inlineHelpText>
        <label>Secret Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <defaultValue>"Etc/UTC"</defaultValue>
        <description>The timezone of the Duo instance. Should be a valid timezone as described by the java.util.TimeZone.getAvailableIDs method.</description>
        <inlineHelpText>The timezone of the Duo instance. Should be a valid timezone as described by the java.util.TimeZone.getAvailableIDs method.</inlineHelpText>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Duo Configuration</label>
    <pluralLabel>Duo Configurations</pluralLabel>
</CustomObject>